# esp32-lcd

./: README.md
Squareline/: esp_mjc.tar
demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/: .gitignore  sdkconfig
demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/: main.c
demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_UI/: LVGL_Example.c
demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/Wireless/: Wireless.c  Wireless.h
demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/scripts/: init  mjcflash
first_lcd/: CMakeLists.txt  dependencies.lock_old  sdkconfig  sdkconfig.defaults
first_lcd/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
first_lcd/UI/images/: ui_img_shot_png.c
first_lcd/UI/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
first_lcd/UI2/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
first_lcd/UI2/components/: ui_comp_hook.c
first_lcd/UI2/images/: ui_img_wifi_png.c
first_lcd/UI2/screens/: ui_Screen1.c  ui_Screen1.h
first_lcd/components/lvgl__lvgl/src/font/: lv_font.h
first_lcd/main/: CMakeLists.txt  main.c  project.info  sdcard.c  sdcard.h
first_lcd/main/LCD_Driver/: ST7789.h
first_lcd/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
first_lcd/main/SD_Card/: SD_SPI.c  SD_SPI.h
first_lcd/main/Wireless/: Wireless.c
first_lcd/scripts/: target
upython/python/: boot.py  echosvr.py  fibn.py  primes.py  websrv.py
upython/scripts/: flashcc3  upload
